Changelog
=========

1.4 (unreleased)
----------------

- Nothing changed yet.


1.3 (2010-06-17)
----------------

- CSS Profile wasn't included in last release....FIXED!
  [thet]


1.2 (2010-06-02)
----------------

- Change GS-Profile title to include the package name to better distinguish it
  from other packages.
  [thet]

- Remove title-attribute from jsregistry.xml. Products.ResourceRegistries 2
  doesn't expect it.
  [thet]

- Add cssregistry.xml to have slimbox2 css files registered and include in
  Plone theme.
  [thet]


1.1 (2010-06-02)
----------------

- Update to slimbox to 2.04
  [thet]

1.0 - Unreleased
----------------

- Initial release