@@ -1,0 +1,17 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    i18n_domain="collective.js.slimbox2">
+
+    <browser:resourceDirectory
+        name="slimbox2"
+        directory="resources"
+        permission="zope2.Public"
+        layer=".common.ICollectiveJsSlimbox2Layer" />
+
+    <browser:resource
+        name="slimbox2-overrides.css"
+        file="slimbox2-overrides.css"
+        layer=".common.ICollectiveJsSlimbox2Layer" />
+
+</configure>
