@@ -13,4 +13,10 @@
     cacheable="True" compression="safe" cookable="True"
     enabled="False" expression="" />
 
+  <stylesheet title=""
+    id="++resource++slimbox2-overrides.css"
+    media="screen" rel="stylesheet" rendering="link"
+    cacheable="True" compression="safe" cookable="True"
+    enabled="True" expression="" />
+
 </object>
