@@ -4,8 +4,13 @@ Changelog
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add an slimbox2-overrides.css to properly reference images which weren't
+  found before.
+  [thet]
 
+- Add an browserlayer, so that resources are only available if the
+  browserlayer was registered.
+  [thet]
 
 1.3 (2010-06-17)
 ----------------
